WebVTT line, position and size cue properties stored as double

updated the line, position and size properties to double
updated test cases and expected results

Bug: 699063
Change-Id: Icc179032077e0e1351efed64cc5a965ee254ca09
Reviewed-on: https://chromium-review.googlesource.com/836576
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Commit-Queue: srirama chandra sekhar <srirama.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#526469}
Former-commit-id: fbdca255c3f886b43912e28e012e016334a8853c